[gd_scene load_steps=3 format=3 uid="uid://blb2qv81c56ee"]

[ext_resource type="Script" uid="uid://c0mhry1qle6ts" path="res://Scripts/Main.gd" id="1_r150o"]

[sub_resource type="Theme" id="Theme_c1w88"]
Label/font_sizes/font_size = 50

[node name="Game" type="Node"]
script = ExtResource("1_r150o")

[node name="GUI" type="Control" parent="."]
modulate = Color(0.49989, 0.479081, 0.448819, 1)
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="GUI"]
custom_minimum_size = Vector2(1152, 448)
layout_mode = 0
offset_top = 100.0
offset_right = 1152.0
offset_bottom = 548.0
theme = SubResource("Theme_c1w88")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/ScrollContainer"]
modulate = Color(0, 0.00762731, 0.00762919, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="topBar" type="ColorRect" parent="GUI"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 103.0

[node name="buttonDecision" type="Button" parent="GUI/topBar"]
layout_mode = 0
offset_left = 300.0
offset_right = 847.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 68
text = "Make A Decision"

[node name="botBar" type="ColorRect" parent="GUI"]
layout_mode = 0
offset_top = 548.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="inputOption" type="TextEdit" parent="GUI/botBar"]
layout_mode = 0
offset_left = 35.0
offset_right = 435.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Option Input"

[node name="inputWeight" type="TextEdit" parent="GUI/botBar"]
layout_mode = 0
offset_left = 460.0
offset_right = 560.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Weight
"

[node name="buttonAdd" type="Button" parent="GUI/botBar"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 0
offset_left = 585.0
offset_right = 835.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 25
text = "Add"

[node name="buttonRemove" type="Button" parent="GUI/botBar"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 0
offset_left = 860.0
offset_right = 1110.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 25
text = "Remove"

[connection signal="pressed" from="GUI/topBar/buttonDecision" to="." method="_on_button_decision_pressed"]
[connection signal="focus_entered" from="GUI/botBar/inputOption" to="." method="_on_input_option_focus_entered"]
[connection signal="focus_entered" from="GUI/botBar/inputWeight" to="." method="_on_input_weight_focus_entered"]
[connection signal="pressed" from="GUI/botBar/buttonAdd" to="." method="_on_button_add_pressed"]
[connection signal="pressed" from="GUI/botBar/buttonRemove" to="." method="_on_button_remove_pressed"]
